Added header and character container

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <h1>RPG Game</h1>
+    <div id="charcont">
+        <div id="char1" class="char"></div>
+        <div id="char2" class="char"></div>
+        <div id="char3" class="char"></div>
+        <div id="char4" class="char"></div>
+    </div>
 </body>
 </html>
