Added main body structure

--- a/index.html
+++ b/index.html
@@ -15,5 +15,21 @@
         <div id="char3" class="char"></div>
         <div id="char4" class="char"></div>
     </div>
+    <div id="yourchar">
+        <div id="yourchartext" class="headtext">Your Character</div>
+        <div id="playerchar"></div>
+    </div>
+    <div id="enemychar">
+        <div id="enemychartext" class="headtext">Enemies Available to Attack</div>
+        <div id="enemychar"></div>
+    </div>
+    <div id="fightsec">
+        <div id="fightsectext" >Fight Section</div>
+        <button type="button" id="attack">Attack!</button>
+    </div>
+    <div id="defend">
+        <div id="defendtext" class="headtext">Defender</div>
+        <div id="defendarea"></div>
+    </div>
 </body>
 </html>
