--- a/index.html
+++ b/index.html
@@ -8,28 +8,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>RPG Game</h1>
+    <h1>Crystal Game</h1>
+    <div id="target"></div>
     <div id="charcont">
-        <div id="char1" class="char"></div>
-        <div id="char2" class="char"></div>
-        <div id="char3" class="char"></div>
-        <div id="char4" class="char"></div>
+        <div id="char1" class="char"><img src="https://azurlane.koumakan.jp/w/images/5/5f/HoodChibi.png"></div>
+        <div id="char2" class="char"><img src="https://azurlane.koumakan.jp/w/images/1/19/TirpitzChibi.png"></div>
+        <div id="char3" class="char"><img src="https://azurlane.koumakan.jp/w/images/1/18/MontpelierChibi.png"></div>
+        <div id="char4" class="char"><img src="https://azurlane.koumakan.jp/w/images/4/49/KawakazeChibi.png"></div>
     </div>
-    <div id="yourchar">
-        <div id="yourchartext" class="headtext">Your Character</div>
-        <div id="playerchar"></div>
-    </div>
-    <div id="enemychar">
-        <div id="enemychartext" class="headtext">Enemies Available to Attack</div>
-        <div id="enemychar"></div>
-    </div>
-    <div id="fightsec">
-        <div id="fightsectext" >Fight Section</div>
-        <button type="button" id="attack">Attack!</button>
-    </div>
-    <div id="defend">
-        <div id="defendtext" class="headtext">Defender</div>
-        <div id="defendarea"></div>
-    </div>
+    <div id="score"></div>
 </body>
 </html>
