--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
     <h1>Crystal Game</h1>
-    <div id="target"></div>
+    <div id="cont">
+        <div id="target"></div>
+        <div id="record"></div>
+    </div>
     <div id="charcont">
         <div id="char1" class="char"><img src="https://azurlane.koumakan.jp/w/images/5/5f/HoodChibi.png"></div>
         <div id="char2" class="char"><img src="https://azurlane.koumakan.jp/w/images/1/19/TirpitzChibi.png"></div>
         <div id="char3" class="char"><img src="https://azurlane.koumakan.jp/w/images/1/18/MontpelierChibi.png"></div>
         <div id="char4" class="char"><img src="https://azurlane.koumakan.jp/w/images/4/49/KawakazeChibi.png"></div>
     </div>
+    <div id="scoretext">Your total score is:</div>
     <div id="score"></div>
 </body>
 </html>
