--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>RPG Style Game</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
     <h1>Crystal Game</h1>
