Added initial variables

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>RPG Style Game</title>
+    <title>Crystal Game</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -22,5 +22,6 @@
     </div>
     <div id="scoretext">Your total score is:</div>
     <div id="score"></div>
+    <script src="assets/javascript/game.js"></script>
 </body>
 </html>
