--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <h1>Crystal Game</h1>
     <div id="cont">
         <div id="target"></div>
-        <div id="record"></div>
+        <div id="win"></div>
+        <div id="loss"></div>
     </div>
     <div id="charcont">
         <div id="char1" class="char"><img src="https://azurlane.koumakan.jp/w/images/5/5f/HoodChibi.png"></div>
