--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>Crystal Game</title>
+    <title>Point Collection Game</title>
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 </head>
 <body>
-    <h1>Crystal Game</h1>
+    <h1>Point Collection Game</h1>
     <div id="cont">
         <div id="target"></div>
         <div id="win"></div>
